[package]
name = "kura"
description = "tool to manage all your memes. Kura = Storehouse in japanese"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
jiff = { version = "0.2.24", features = ["serde"] }
miette = "7.6.0"
reqwest = { version = "0.13.3", features = ["blocking"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_rusqlite = "0.42.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
