[package]
name = "kura"
description = "tool to manage all your memes. Kura = Storehouse in japanese"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
hako = { version = "0.1.0", path = "../hako" }
hex = "0.4.3"
image = "0.25.10"
jiff = { version = "0.2.24", features = ["serde"] }
miette = "7.6.0"
reqwest = "0.13.3"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
