[workspace]
members = [".", "hako"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
hex = "0.4.3"
image = "0.25.10"
jiff = { version = "0.2.24", features = ["serde"] }
miette = "7.6.0"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", features = ["tokio"] }
reqwest = "0.13.3"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

[package]
name = "kura"
description = "tool to manage all your memes. Kura = Storehouse in japanese"
version.workspace = true
edition.workspace = true

[lints.clippy]
format_push_string = "warn"
implicit_clone     = "warn"
use_self           = "warn"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[dependencies]
clap = { workspace = true }
directories = { workspace = true }
hako = { version = "0.1.0", path = "hako" }
hex = { workspace = true }
image = { workspace = true }
jiff = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
